--- a/html/biz/assets/css/main.css
+++ b/html/biz/assets/css/main.css
@@ -151,6 +151,7 @@ footer .footer-inner--copy {
     left: 30px; }
 body {
   font-family: "SF Pro JP", "SF Pro Display", "SF Pro Icons", "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", メイリオ, Meiryo, "ＭＳ Ｐゴシック", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  overflow-x: hidden;
   overflow-x: hidden; }
 main .hero-block {
   width: 100%;
