featureブランチでcssの修正

--- a/html/biz/assets/css/main.css
+++ b/html/biz/assets/css/main.css
@@ -153,6 +153,7 @@ body {
   font-family: "SF Pro JP", "SF Pro Display", "SF Pro Icons", "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", メイリオ, Meiryo, "ＭＳ Ｐゴシック", "Helvetica Neue", Helvetica, Arial, sans-serif;
   overflow-x: hidden;
   overflow-x: hidden;
+  overflow-x: hidden;
   overflow-x: hidden; }
 main .hero-block {
   width: 100%;
